# RayTracing

./: RayTracing.sln
RayTracing/: Camera.cs  ColorHelper.cs  Interval.cs  MathHelper.cs  Program.cs  Ray.cs  RayTracing.csproj  Vector3.cs
RayTracing/Materials/: Dielectric.cs  Lambertian.cs  Material.cs  Metal.cs
RayTracing/Obstacles/: HitRecord.cs  Hittable.cs  HittableList.cs  Sphere.cs
timeLapse/: main.py  pyproject.toml
